feat: add elements

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <title>Mesto</title>
   </head>
-  <body class="page page__center">
+  <body class="page center">
     <header class="header">
       <img src="./images/Header__logo.svg" alt="Логотип сайта" class="header__logo" />
     </header>
@@ -44,44 +44,48 @@
       <section class="elements">
         <div class="element">
           <img src="./images/karacha.jpg" alt="Карачаевск" class="element__img" />
-          <div class="element__discription">
-            <p class="element title">Карачаевск</p>
-            <img src="./images/like.svg" alt="Лайк" class="elemetn__like-ico" />
+          <div class="element__description">
+            <p class="element__title">Карачаевск</p>
+            <img
+              src="./images/like.svg"
+              alt="Лайк"
+              class="element__like-ico element__like-ico_active"
+            />
           </div>
         </div>
         <div class="element">
           <img src="./images/elbr.jpg" alt="Гора Эльбрус" class="element__img" />
-          <div class="element__discription">
-            <p class="element title">Гора Эльбрус</p>
-            <img src="./images/like.svg" alt="Лайк" class="elemetn__like-ico" />
+          <div class="element__description">
+            <p class="element__title">Гора Эльбрус</p>
+            <img src="./images/like.svg" alt="Лайк" class="element__like-ico" />
           </div>
         </div>
         <div class="element">
           <img src="./images/domba.jpg" alt="Домбай" class="element__img" />
-          <div class="element__discription">
-            <p class="element title">Домбай</p>
-            <img src="./images/like.svg" alt="Лайк" class="elemetn__like-ico" />
+          <div class="element__description">
+            <p class="element__title">Домбай</p>
+            <img src="./images/like.svg" alt="Лайк" class="element__like-ico" />
           </div>
         </div>
         <div class="element">
           <img src="./images/elbrus.jpg" alt="Гора Эльбрус" class="element__img" />
-          <div class="element__discription">
-            <p class="element title">Гора Эльбрус</p>
-            <img src="./images/like.svg" alt="Лайк" class="elemetn__like-ico" />
+          <div class="element__description">
+            <p class="element__title">Гора Эльбрус</p>
+            <img src="./images/like.svg" alt="Лайк" class="element__like-ico" />
           </div>
         </div>
         <div class="element">
           <img src="./images/dombai.jpg" alt="Домбай" class="element__img" />
-          <div class="element__discription">
-            <p class="element title">Домбай</p>
-            <img src="./images/like.svg" alt="Лайк" class="elemetn__like-ico" />
+          <div class="element__description">
+            <p class="element__title">Домбай</p>
+            <img src="./images/like.svg" alt="Лайк" class="element__like-ico" />
           </div>
         </div>
         <div class="element">
           <img src="./images/karachae-cher.jpg" alt="Карачаево-Черкессия" class="element__img" />
-          <div class="element__discription">
-            <p class="element title">Карачаево-Черкессия</p>
-            <img src="./images/like.svg" alt="Лайк" class="elemetn__like-ico" />
+          <div class="element__description">
+            <p class="element__title">Карачаево-Черкессия</p>
+            <img src="./images/like.svg" alt="Лайк" class="element__like-ico" />
           </div>
         </div>
       </section>
