feat: add footer

--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
         </div>
       </section>
     </main>
-    <foote class="footer"></foote>
+    <footer class="footer">
+      <p class="footer__text">&copy; 2023 Mesto Russia</p>
+    </footer>
   </body>
 </html>
