--- a/index.html
+++ b/index.html
@@ -89,6 +89,19 @@
           </div>
         </div>
       </section>
+      <div class="popup popup_opened">
+        <div class="popup__container">
+          <form action="#" class="popup__form">
+            <fieldset class="popup__fieldset">
+              <legend class="popup__title">Редактировать профиль</legend>
+              <input class="popup__input" type="text" value="Жак-Ив Кусто" />
+              <input class="popup__input" type="text" value="Исследователь океана" />
+            </fieldset>
+            <button class="popup__btn" type="submit">Сохранить</button>
+          </form>
+        </div>
+        <img src="./images/popup__close.svg" alt="Закрыть окно" class="popup__close-ico" />
+      </div>
     </main>
     <footer class="footer">
       <p class="footer__text">&copy; 2023 Mesto Russia</p>
