fix: fix README.md

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;900&display=swap"
       rel="stylesheet"
     />
-    <script src="./blocks/popup/popup.js" defer></script>
     <title>Mesto</title>
   </head>
+
   <body class="page center">
     <header class="header">
       <img src="./images/Header__logo.svg" alt="Логотип сайта" class="header__logo" />
@@ -111,5 +111,6 @@
     <footer class="footer">
       <p class="footer__text">&copy; 2023 Mesto Russia</p>
     </footer>
+    <script src="./pages/index.js"></script>
   </body>
 </html>
