--- a/index.html
+++ b/index.html
@@ -17,46 +17,46 @@
           <img src="./images/profile__img.jpg" alt="Аватар" class="profile__img" />
           <div class="profile__text-info">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button class="profile__edit-button" type="submit" aria-label="Редактировать профиль"></button>
+            <button class="profile__edit-button" type="button" aria-label="Редактировать профиль"></button>
             <p class="profile__job">Исследователь океана</p>
           </div>
         </div>
-        <button class="profile__add-button" type="submit" aria-label="Кнопка добавить"></button>
+        <button class="profile__add-button" type="button" aria-label="Кнопка добавить"></button>
       </section>
       <section class="elements">
         <article class="element">
           <img src="./images/karacha.jpg" alt="Карачаевск" class="element__img" />
           <div class="element__description">
             <h2 class="element__title">Карачаевск</h2>
-            <button class="element__like-btn" type="submit" aria-label="Лайк"></button>
+            <button class="element__like-btn" type="button" aria-label="Лайк"></button>
           </div>
         </article>
         <article class="element">
           <img src="./images/elbr.jpg" alt="Гора Эльбрус" class="element__img" />
           <div class="element__description">
             <h2 class="element__title">Гора Эльбрус</h2>
-            <button class="element__like-btn" type="submit" aria-label="Лайк"></button>
+            <button class="element__like-btn" type="button" aria-label="Лайк"></button>
           </div>
         </article>
         <article class="element">
           <img src="./images/domba.jpg" alt="Домбай" class="element__img" />
           <div class="element__description">
             <h2 class="element__title">Домбай</h2>
-            <button class="element__like-btn" type="submit" aria-label="Лайк"></button>
+            <button class="element__like-btn" type="button" aria-label="Лайк"></button>
           </div>
         </article>
         <article class="element">
           <img src="./images/elbrus.jpg" alt="Гора Эльбрус" class="element__img" />
           <div class="element__description">
             <h2 class="element__title">Гора Эльбрус</h2>
-            <button class="element__like-btn" type="submit" aria-label="Лайк"></button>
+            <button class="element__like-btn" type="button" aria-label="Лайк"></button>
           </div>
         </article>
         <article class="element">
           <img src="./images/dombai.jpg" alt="Домбай" class="element__img" />
           <div class="element__description">
             <h2 class="element__title">Домбай</h2>
-            <button class="element__like-btn" type="submit" aria-label="Лайк"></button>
+            <button class="element__like-btn" type="button" aria-label="Лайк"></button>
           </div>
         </article>
         <article class="element">
