fix: refactor js

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="popup popup_type_view-image">
         <figure class="popup__view-image-figure">
           <img src="" alt="" class="popup__view-image-item" />
-          <figcaption class="popup-img__figcaption-img popup__view-image-figcaption"></figcaption>
+          <figcaption class="popup__view-image-figcaption"></figcaption>
           <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно"></button>
         </figure>
       </div>
