--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section class="elements">
         <template id="card">
           <article class="element">
-            <img src="" alt="" class="element__img" />
+            <img src="#" alt="" class="element__img" />
             <button class="element__trash-btn" type="button" aria-label="Удалить картинку"></button>
             <div class="element__description">
               <h2 class="element__title"></h2>
@@ -70,7 +70,7 @@
     <template id="popup-view-image">
       <div class="popup popup_type_view-image">
         <figure class="popup__view-image-figure">
-          <img src="" alt="" class="popup__view-image-item" />
+          <img src="#" alt="" class="popup__view-image-item" />
           <figcaption class="popup__view-image-figcaption"></figcaption>
           <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно"></button>
         </figure>
