--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </article>
     </template>
 
-    <div class="popup popup_type_edit-profile">
+    <div class="popup popup_type_edit-profile preload">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
         <form action="#" name="editProfileForm" class="popup__form popup__form-edit">
@@ -48,11 +48,11 @@
           <input class="popup__input popup__input_value_job" type="text" placeholder="О себе" name="job" />
           <button class="popup__btn" type="submit">Сохранить</button>
         </form>
-        <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно" data-popup="editProfile"></button>
+        <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно" data-popup="popupEditProfile"></button>
       </div>
     </div>
 
-    <div class="popup popup_type_add-card">
+    <div class="popup popup_type_add-card preload">
       <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
         <form action="#" name="addImage" class="popup__form popup__form-add">
@@ -60,17 +60,18 @@
           <input class="popup__input popup__input_value_img-link" type="text" placeholder="Ссылка на картинку" name="img-link" />
           <button class="popup__btn" type="submit">Создать</button>
         </form>
-        <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно" data-popup="addCard"></button>
+        <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно" data-popup="popupAddCard"></button>
       </div>
     </div>
-    <div class="popup popup_type_view-image">
+    
+    <div class="popup popup_type_view-image preload">
       <figure class="popup__view-image-figure">
         <img src="#" alt="" class="popup__view-image-item" />
         <figcaption class="popup__view-image-figcaption"></figcaption>
-        <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно" data-popup="viewImage"></button> 
+        <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно" data-popup="popupViewImage"></button> 
       </figure>
     </div>
     </template>
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js"> </script>
   </body>
 </html>
