fix: refactor js file

--- a/index.html
+++ b/index.html
@@ -43,24 +43,24 @@
     <div class="popup popup_type_edit-profile preload">
       <div class="popup__container">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form action="#" name="editProfileForm" class="popup__form popup__form-edit">
+        <form action="#" name="profileEditingForm" class="popup__form popup__form-edit">
           <input class="popup__input popup__input_value_name" type="text" placeholder="Имя" name="name" />
           <input class="popup__input popup__input_value_job" type="text" placeholder="О себе" name="job" />
           <button class="popup__btn" type="submit">Сохранить</button>
         </form>
-        <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно" data-popup="popupEditProfile"></button>
+        <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно"></button>
       </div>
     </div>
 
     <div class="popup popup_type_add-card preload">
       <div class="popup__container">
         <h2 class="popup__title">Новое место</h2>
-        <form action="#" name="addImage" class="popup__form popup__form-add">
+        <form action="#" name="imageAddingForm" class="popup__form popup__form-add">
           <input class="popup__input popup__input_value_img-title" type="text" placeholder="Название" name="img-title" />
           <input class="popup__input popup__input_value_img-link" type="text" placeholder="Ссылка на картинку" name="img-link" />
           <button class="popup__btn" type="submit">Создать</button>
         </form>
-        <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно" data-popup="popupAddCard"></button>
+        <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно"></button>
       </div>
     </div>
 
@@ -68,7 +68,7 @@
       <figure class="popup__view-image-figure">
         <img src="#" alt="" class="popup__view-image-item" />
         <figcaption class="popup__view-image-figcaption"></figcaption>
-        <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно" data-popup="popupViewImage"></button>
+        <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно"></button>
       </figure>
     </div>
     <script src="./scripts/index.js"></script>
