feat: add validation forms

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
         <form action="#" name="imageAddingForm" class="popup__form popup__form-add">
           <label class="popup__input-field">
             <input id="img-title-input" class="popup__input popup__input_value_img-title" type="text" placeholder="Название" name="img-title" minlength="2" maxlength="30" required />
-            <span class="popup__input-error-message img-title-input-error">asd</span>
+            <span class="popup__input-error-message img-title-input-error"></span>
           </label>
           <label class="popup__input-field">
             <input id="img-url-input" class="popup__input popup__input_value_img-link" type="url" placeholder="Ссылка на картинку" name="img-link" required />
-            <span class="popup__input-error-message img-url-input-error">asd</span>
+            <span class="popup__input-error-message img-url-input-error"></span>
           </label>
           <button class="popup__btn" type="submit">Создать</button>
         </form>
