--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
       </figure>
     </div>
     <script type="module" src="./scripts/cards.js"></script>
+    <script type="module" src="./scripts/Card.js"></script>
+    <script type="module" src="./scripts/FormValidator.js"></script>
     <script type="module" src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
   </body>
 </html>
