refactor: refactor classes Card and Form

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно"></button>
       </figure>
     </div>
-    <script type="module" src="./scripts/cards.js"></script>
+    <!-- <script type="module" src="./scripts/cards.js"></script>
     <script type="module" src="./scripts/Card.js"></script>
-    <script type="module" src="./scripts/FormValidator.js"></script>
+    <script type="module" src="./scripts/FormValidator.js"></script> -->
     <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
