--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,13 @@
   <main class="content">
     <section class="profile">
       <div class="profile__info">
-        <img src="<%=require('./images/profile__img.jpg')%>" alt="Аватар" class="profile__img" />
+        <div class="profile__img-wrapper">
+          <img src="" alt="Аватар" class="profile__img" />
+        </div>
         <div class="profile__text-info">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <h1 class="profile__name"></h1>
           <button class="profile__edit-button" type="button" aria-label="Редактировать профиль"></button>
-          <p class="profile__job">Исследователь океана</p>
+          <p class="profile__job"></p>
         </div>
       </div>
       <button class="profile__add-button" type="button" aria-label="Кнопка добавить"></button>
@@ -34,6 +36,7 @@
       <div class="element__description">
         <h2 class="element__title"></h2>
         <button class="element__like-btn" type="button" aria-label="Лайк"></button>
+        <span class="element__like-count">111</span>
       </div>
     </article>
   </template>
@@ -81,6 +84,30 @@
       <figcaption class="popup__view-image-figcaption"></figcaption>
       <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно"></button>
     </figure>
+  </div>
+  <div class="popup popup_type_confirm-delete-card preload">
+    <div class="popup__container">
+      <h2 class="popup__title">Вы уверены?</h2>
+      <form action="#" name="confirmВeleteСard" class="popup__form popup__form-confirm-delete-card">
+        <button class="popup__btn" type="submit">Да</button>
+      </form>
+      <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно"></button>
+    </div>
+  </div>
+
+  <div class="popup popup_type_change-avatar preload">
+    <div class="popup__container">
+      <h2 class="popup__title">Обновить аватар</h2>
+      <form action="#" name="changeAvatar" class="popup__form popup__form-change-avatar" novalidate>
+        <label class="popup__input-field">
+          <input id="img-url-input" class="popup__input popup__input_value_img-link" type="url"
+            placeholder="Ссылка на новый аватар" name="img-link" required />
+          <span class="popup__input-error-message img-url-input-error"></span>
+        </label>
+        <button class="popup__btn" type="submit">Сохранить</button>
+      </form>
+      <button class="popup__close-btn" type="button" aria-label="Закрыть всплывающее окно"></button>
+    </div>
   </div>
 </body>
 </html>
