--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <section class="profile">
       <div class="profile__info">
         <div class="profile__img-wrapper">
-          <img src="" alt="Аватар" class="profile__img" />
+          <img src="#" alt="Аватар" class="profile__img" />
         </div>
         <div class="profile__text-info">
           <h1 class="profile__name"></h1>
@@ -100,7 +100,7 @@
       <h2 class="popup__title">Обновить аватар</h2>
       <form action="#" name="changeAvatar" class="popup__form popup__form-change-avatar" novalidate>
         <label class="popup__input-field">
-          <input id="img-url-input" class="popup__input popup__input_value_img-link" type="url"
+          <input id="img-url-avatar-input" class="popup__input popup__input_value_img-link" type="url"
             placeholder="Ссылка на новый аватар" name="img-link" required />
           <span class="popup__input-error-message img-url-input-error"></span>
         </label>
