fix: bugs in PW #9

--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
         <label class="popup__input-field">
           <input id="img-url-avatar-input" class="popup__input popup__input_value_img-link" type="url"
             placeholder="Ссылка на новый аватар" name="img-link" required />
-          <span class="popup__input-error-message img-url-input-error"></span>
+          <span class="popup__input-error-message img-url-avatar-input-error"></span>
         </label>
         <button class="popup__btn" type="submit">Сохранить</button>
       </form>
