fix: reset forms validation

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
   <div class="popup popup_type_change-avatar preload">
     <div class="popup__container">
       <h2 class="popup__title">Обновить аватар</h2>
-      <form action="#" name="changeAvatar" class="popup__form popup__form-change-avatar" novalidate>
+      <form action="#" name="changeAvatarForm" class="popup__form popup__form-change-avatar" novalidate>
         <label class="popup__input-field">
           <input id="img-url-avatar-input" class="popup__input popup__input_value_img-link" type="url"
             placeholder="Ссылка на новый аватар" name="img-link" required />
